fixed dialog overlay not covering screen when scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -151,7 +151,7 @@ button {
 
 .overlay-background {
     display: none;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     overflow: hidden;
